Added empty resource implementations
