# compass-server/src/main/java/org/zalando/compass/domain/model/Dimension.java
@@ -1,0 +1,4 @@
+package org.zalando.compass.domain.model;
+
+public class Dimension {
+}
